# bgtail

./: .gitignore  README.md  bgtail.py  pyproject.toml
bgtail/: __init__.py  cli.py
tests/: conftest.py  integration-test.sh  test_args_passthrough.py  test_log_mode_flags.py  test_project_log_paths.py  test_reconnect_no_window.py  test_runner_failures.py  test_terminal_window.py
