[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bgtail"
version = "0.1.0"
description = "Run long-running commands detached with minimal heartbeat"
requires-python = ">=3.11"

[project.scripts]
bgtail = "bgtail:main_entry"

[tool.setuptools]
packages = ["bgtail"]

[tool.ruff]
line-length = 100
